# memories-plugin

./: .gitignore  .mcp.json  AGENT_README.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  PRIVACY.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run-memories.sh
.ai/: PROJECT_OVERVIEW.md
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
.claude/skills/memories-benchmark/: SKILL.md
.claude/skills/memories-explain/: SKILL.md
.claude/skills/memories-graph-analyst/: SKILL.md
.claude/skills/memories-health/: SKILL.md
.claude/skills/memories-hebbian-architect/: SKILL.md
.claude/skills/memories-perf-architect/: SKILL.md
.claude/skills/memories-prune/: SKILL.md
.github/workflows/: tests.yml
data/: locomo_judge_baseline_prompts.json  locomo_judge_iter5a.json
docs/: changelog.md  context-improvement-plan.md  contributing.md  improvement-plan-v2.md  index.md  license.md  locomo-benchmark.md  test-coverage-analysis.md
docs/api/: mcp-tools.md  python-api.md
docs/concepts/: antipatterns.md  consolidation.md  hebbian-learning.md  spreading-activation.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: best-practices.md  claude-code.md  troubleshooting.md
hooks/: hooks.json
src/memories/: CLAUDE.md  __init__.py  __main__.py  atoms.py  brain.py  cli.py  config.py  consolidation.py  context.py  credentials.py  embeddings.py  learning.py  migrate.py  ollama_manager.py  process_manager.py  queue.py  retrieval.py  server.py  setup.py  skill_gen.py  storage.py  synapses.py
src/memories/benchmarks/: __init__.py  locomo_data.py  (+3 more)
tests/: conftest.py  test_activity_rules.py  test_antipattern_classification.py  test_atoms.py  test_atoms_batch.py  test_brain.py  test_consolidation.py  test_context.py  test_coverage_antipattern_pipeline.py  test_coverage_brain.py  test_coverage_cli_hooks.py  test_coverage_embeddings.py  test_coverage_m1_session_prime.py  test_coverage_server_tasks.py  test_embeddings.py  test_hebbian_hooks.py  test_hook_stats.py  test_importance.py  test_integration_recall.py  test_junk_filter.py  test_learning.py  test_load.py  test_locomo.py  test_migrations.py  test_process_manager_force.py  test_rejection_learning.py  test_retrieval.py  test_scale_1000.py  test_server.py  test_shodh_features.py  test_skill_gen.py  test_storage.py  test_synapses.py  test_synthetic_e2e.py  test_tasks.py  test_transcript_reader.py  test_w11.py  test_w12.py  test_w13.py  test_w13b.py  (+19 more)
(+1 files in other folders)
